src/snapshots/pyc_editor__cfg__test__async_func.snap
---
source: src/cfg.rs
expression: cfg
---
ControlFlowGraph {
    blocks: [
        NormalBlock(
            NormalBlock {
                instructions: [
                    GenStart(
                        Coroutine,
                    ),
                    LoadGlobal(
                        NameIndex {
                            index: 0,
                        },
                    ),
                    CallFunction(
                        0,
                    ),
                    StoreFast(
                        VarNameIndex {
                            index: 0,
                        },
                    ),
                    LoadFast(
                        VarNameIndex {
                            index: 0,
                        },
                    ),
                ],
                branch_block: Edge(
                    BranchEdge {
                        reason: POP_JUMP_IF_TRUE,
                        block_index: Index(
                            1,
                        ),
                    },
                ),
                default_block: Edge(
                    BranchEdge {
                        reason: POP_JUMP_IF_TRUE,
                        block_index: Index(
                            2,
                        ),
                    },
                ),
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadFast(
                        VarNameIndex {
                            index: 0,
                        },
                    ),
                    ReturnValue(
                        UnusedArgument(
                            0,
                        ),
                    ),
                ],
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadGlobal(
                        NameIndex {
                            index: 1,
                        },
                    ),
                    LoadMethod(
                        NameIndex {
                            index: 2,
                        },
                    ),
                    CallMethod(
                        0,
                    ),
                    GetAwaitable(
                        UnusedArgument(
                            0,
                        ),
                    ),
                    LoadConst(
                        ConstIndex {
                            index: 0,
                        },
                    ),
                    YieldFrom(
                        UnusedArgument(
                            0,
                        ),
                    ),
                    PopTop(
                        UnusedArgument(
                            0,
                        ),
                    ),
                    LoadGlobal(
                        NameIndex {
                            index: 0,
                        },
                    ),
                    CallFunction(
                        0,
                    ),
                    StoreFast(
                        VarNameIndex {
                            index: 0,
                        },
                    ),
                    LoadFast(
                        VarNameIndex {
                            index: 0,
                        },
                    ),
                ],
                branch_block: Edge(
                    BranchEdge {
                        reason: POP_JUMP_IF_FALSE,
                        block_index: Index(
                            2,
                        ),
                    },
                ),
                default_block: Edge(
                    BranchEdge {
                        reason: POP_JUMP_IF_FALSE,
                        block_index: Index(
                            1,
                        ),
                    },
                ),
            },
        ),
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
