src/snapshots/pyc_editor__cfg__test__exception_block_311.snap
---
source: src/cfg.rs
expression: cfg
---
ControlFlowGraph {
    blocks: [
        Block {
            instructions: [
                Resume(
                    StartFunction,
                ),
                PushNull(
                    UnusedArgument(
                        0,
                    ),
                ),
                LoadName(
                    NameIndex {
                        index: 0,
                    },
                ),
                LoadConst(
                    ConstIndex {
                        index: 0,
                    },
                ),
                Precall(
                    1,
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Call(
                    1,
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                PopTop(
                    UnusedArgument(
                        0,
                    ),
                ),
                Nop(
                    UnusedArgument(
                        0,
                    ),
                ),
            ],
            branch_block: NoIndex,
            default_block: Fallthrough(
                Index(
                    1,
                ),
            ),
        },
        Block {
            instructions: [],
            branch_block: Edge(
                BranchEdge {
                    reason: Exception(
                        (
                            false,
                            0,
                        ),
                    ),
                    block_index: Index(
                        2,
                    ),
                },
            ),
            default_block: Edge(
                BranchEdge {
                    reason: Exception(
                        (
                            false,
                            0,
                        ),
                    ),
                    block_index: Index(
                        3,
                    ),
                },
            ),
        },
        Block {
            instructions: [],
            branch_block: Edge(
                BranchEdge {
                    reason: Exception(
                        (
                            true,
                            1,
                        ),
                    ),
                    block_index: Index(
                        5,
                    ),
                },
            ),
            default_block: Edge(
                BranchEdge {
                    reason: Exception(
                        (
                            true,
                            1,
                        ),
                    ),
                    block_index: Index(
                        6,
                    ),
                },
            ),
        },
        Block {
            instructions: [
                PushNull(
                    UnusedArgument(
                        0,
                    ),
                ),
                LoadName(
                    NameIndex {
                        index: 0,
                    },
                ),
                LoadConst(
                    ConstIndex {
                        index: 1,
                    },
                ),
                Precall(
                    1,
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Call(
                    1,
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
            ],
            branch_block: NoIndex,
            default_block: Fallthrough(
                Index(
                    4,
                ),
            ),
        },
        Block {
            instructions: [
                PopTop(
                    UnusedArgument(
                        0,
                    ),
                ),
                LoadConst(
                    ConstIndex {
                        index: 3,
                    },
                ),
                ReturnValue(
                    UnusedArgument(
                        0,
                    ),
                ),
            ],
            branch_block: NoIndex,
            default_block: NoIndex,
        },
        Block {
            instructions: [
                Copy(
                    3,
                ),
                PopExcept(
                    UnusedArgument(
                        0,
                    ),
                ),
                Reraise(
                    ReraiseTOSAndSetLasti(
                        1,
                    ),
                ),
            ],
            branch_block: NoIndex,
            default_block: NoIndex,
        },
        Block {
            instructions: [
                PushExcInfo(
                    UnusedArgument(
                        0,
                    ),
                ),
                PopTop(
                    UnusedArgument(
                        0,
                    ),
                ),
                PushNull(
                    UnusedArgument(
                        0,
                    ),
                ),
                LoadName(
                    NameIndex {
                        index: 0,
                    },
                ),
                LoadConst(
                    ConstIndex {
                        index: 2,
                    },
                ),
                Precall(
                    1,
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Call(
                    1,
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
                Cache(
                    UnusedArgument(
                        0,
                    ),
                ),
            ],
            branch_block: NoIndex,
            default_block: Fallthrough(
                Index(
                    7,
                ),
            ),
        },
        Block {
            instructions: [
                PopTop(
                    UnusedArgument(
                        0,
                    ),
                ),
                PopExcept(
                    UnusedArgument(
                        0,
                    ),
                ),
                LoadConst(
                    ConstIndex {
                        index: 3,
                    },
                ),
                ReturnValue(
                    UnusedArgument(
                        0,
                    ),
                ),
            ],
            branch_block: NoIndex,
            default_block: NoIndex,
        },
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
