src/snapshots/pyc_editor__cfg__test__ext_trick.snap
---
source: src/cfg.rs
expression: cfg
---
ControlFlowGraph {
    blocks: [
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        0,
                    ),
                ],
                branch_block: Edge(
                    BranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        block_index: Index(
                            1,
                        ),
                    },
                ),
                default_block: Edge(
                    BranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        block_index: Index(
                            2,
                        ),
                    },
                ),
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    ExtendedArg(
                        0,
                    ),
                    StoreName(
                        0,
                    ),
                ],
                branch_block: NoIndex,
                default_block: Fallthrough(
                    Index(
                        3,
                    ),
                ),
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    ExtendedArg(
                        0,
                    ),
                    ExtendedArg(
                        0,
                    ),
                    StoreName(
                        0,
                    ),
                ],
                branch_block: NoIndex,
                default_block: Fallthrough(
                    Index(
                        3,
                    ),
                ),
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    Nop(
                        0,
                    ),
                ],
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
