src/snapshots/pyc_editor__cfg__test__ext_trick_with_jump.snap
---
source: src/cfg.rs
expression: cfg
---
ControlFlowGraph {
    blocks: [
        Block {
            instructions: [
                LoadConst(
                    0,
                ),
            ],
            branch_block: Edge(
                BranchEdge {
                    reason: Opcode(
                        POP_JUMP_FORWARD_IF_TRUE,
                    ),
                    block_index: Index(
                        1,
                    ),
                },
            ),
            default_block: Edge(
                BranchEdge {
                    reason: Opcode(
                        POP_JUMP_FORWARD_IF_TRUE,
                    ),
                    block_index: Index(
                        2,
                    ),
                },
            ),
        },
        Block {
            instructions: [],
            branch_block: NoIndex,
            default_block: Fallthrough(
                Index(
                    3,
                ),
            ),
        },
        Block {
            instructions: [
                ExtendedArg(
                    0,
                ),
            ],
            branch_block: NoIndex,
            default_block: Fallthrough(
                Index(
                    3,
                ),
            ),
        },
        Block {
            instructions: [
                Nop(
                    0,
                ),
            ],
            branch_block: Edge(
                BranchEdge {
                    reason: Opcode(
                        JUMP_FORWARD,
                    ),
                    block_index: InvalidIndex(
                        0,
                    ),
                },
            ),
            default_block: NoIndex,
        },
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
