src/snapshots/pyc_editor__cfg__test__simple_instructions.snap
---
source: src/cfg.rs
expression: cfg
---
ControlFlowGraph {
    blocks: [
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        0,
                    ),
                    LoadConst(
                        1,
                    ),
                    CompareOp(
                        0,
                    ),
                ],
                branch_block: Edge(
                    BranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        block_index: Index(
                            1,
                        ),
                    },
                ),
                default_block: Edge(
                    BranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        block_index: Index(
                            2,
                        ),
                    },
                ),
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        3,
                    ),
                    ReturnValue(
                        0,
                    ),
                ],
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        2,
                    ),
                    ReturnValue(
                        0,
                    ),
                ],
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
